design pattern and precommit

--- a/python/.pre-commit-config.yaml
+++ b/python/.pre-commit-config.yaml
@@ -1,12 +1,10 @@
-# .pre-commit-config.yaml
-
 repos:
   - repo: https://github.com/psf/black
-    rev: 25.1.0              
+    rev: 25.1.0
     hooks:
       - id: black
-        language_version: python3.12  
-        args: ['--config', 'pyproject.toml']
+        language_version: python3.12
+        args: ["--config", "pyproject.toml"]
 
   # isort – import sorting
   - repo: https://github.com/PyCQA/isort
