--- a/ts-setup/package.json
+++ b/ts-setup/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ts-func",
   "version": "1.0.0",
-  "description": "```bash     node --version     nvm install 18     nvm use 18     npm init # will initialise the package for you     npm install -g typescript     tsc --version     tsc init ```",
+  "description": "basic setup",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
